force-app/main/default/objects/FieloEE__ProgramLayout__c/FieloEE__ProgramLayout__c.object-meta.xml
<CustomObject>
    <description>Graphic layouts for your members’ portal.</description>
    <label>Program Layout</label>
    <nameField>
        <displayFormat>PP-{0000000}</displayFormat>
        <label>Program Layout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Layout</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>