force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__BackgroundId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__BackgroundId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BackgroundId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>