force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__Color04__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Color04__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Color04</label>
    <length>10</length>
    <type>Text</type>
</CustomField>