force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__ColorFont02__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ColorFont02__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ColorFont02</label>
    <length>10</length>
    <type>Text</type>
</CustomField>