force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__FooterBackgroundId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FooterBackgroundId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Footer Background Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>