force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__Target__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Target__c</fullName>
    <formula>IF( FieloEE__Default__c , &apos;Default&apos;, IF( ISBLANK(FieloEE__Segment__c) || ISNULL(FieloEE__Segment__c), &apos;Guest&apos;, FieloEE__Segment__r.Name ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target</label>
    <type>Text</type>
</CustomField>